# toolchain-shell

./: README.md
backend/: .env.example  DEPLOY.md  OPENAI-SETUP.md  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
backend/chroma_db/: chroma.sqlite3
backend/scripts/: __init__.py  cli.py
backend/src/: __init__.py  cache.py  config.py  metrics.py  utils.py
backend/src/agents/: explain_agent.py  llm.py  rag_agent.py  search_agent.py  state.py  supervisor.py  workflow.py
backend/src/api/: main.py  middleware.py
backend/src/data/: seed_tools.py
backend/src/database/: __init__.py  vectorstore.py
backend/src/models/: __init__.py  tool.py
backend/tests/: conftest.py  test_config.py  test_utils.py
backend/tests/test_agents/: test_explain_agent.py  test_rag_agent.py  test_search_agent.py  test_supervisor.py
backend/tests/test_api/: test_query.py  test_tools.py
backend/tests/test_database/: __init__.py
backend/tests/test_workflow/: __init__.py  test_workflow.py
frontend/: README.md  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/tools/: page.tsx  tools-content.tsx
frontend/src/components/: agent-status.tsx  error-boundary.tsx  navigation.tsx  offline-banner.tsx  search-modal.tsx  tool-card.tsx
frontend/src/components/providers/: smooth-scroll.tsx
frontend/src/components/ui/: badge.tsx  (+10 more)
frontend/src/hooks/: use-health-check.ts  use-search-modal.ts
frontend/src/lib/: api-error-handler.ts  env.ts  utils.ts
frontend/src/types/: index.ts
(+13 files in other folders)
